[package]
name = "vyayah"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.18"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive", "serde_derive"] }
serde_json = "1.0.111"
sled = "0.34.7"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
